test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_square_bracket_alt_2.draco
(:2:) int a;

proc main() void : a := 1; corp;

