test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_signed_as_identifier.draco
int signed;
 
proc main() void : a := 1; corp;
